--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .vs/
 MoodAnalyzerApp/MoodAnalyzerApp/bin
 MoodAnalyzerApp/MoodAnalyzerApp/obj
+MoodAnalyzerApp/MoodAnalyzerAppTest/obj
+MoodAnalyzerApp/MoodAnalyzerAppTest/bin
